--- a/CastleRPG/CastleRPG.uproject
+++ b/CastleRPG/CastleRPG.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{1A424E57-4685-C0FD-0733-4AB71BE76175}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Modules": [
