--- a/CastleRPG/Config/DefaultGame.ini
+++ b/CastleRPG/Config/DefaultGame.ini
@@ -12,7 +12,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=CastleRPG
 LaunchOnTarget=
-StagingDirectory=(Path="../../../../../../Users/user/Desktop/Packages")
+StagingDirectory=(Path="E:/ICLAB1stGame/CastleRPG/Packages")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -94,8 +94,8 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 -IniSectionBlacklist=HordeStorageServers
 +IniSectionBlacklist=HordeStorageServers
-+MapsToCook=(FilePath="")
++MapsToCook=(FilePath="/Game/OPEN_WORD_GOOD_water")
 PerPlatformBuildConfig=(("Windows", PPBC_Development))
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
-PerPlatformBuildTarget=(("Windows", "CastleRPG"))
+PerPlatformBuildTarget=(("Windows", "CastleRPGServer"))
 
