--- a/CastleRPG/CastleRPG.uproject
+++ b/CastleRPG/CastleRPG.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{145F9953-4AD1-D7F3-0FFA-399F8BF9AC37}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
