--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@
 /CastleRPG/Content/City_of_Brass_Enviroment
 /CastleRPG/Content/ModularTemplePlaza
 /CastleRPG/Packages
+/CastleRPG/CastleRPG.uproject
+
+
